# walletconnect-service

./: .gitignore  Cargo.toml  Makefile  README.md  log_config.yaml  rust-toolchain.toml
ops/: deploy.sh  docker-compose-template.yml  docker-compose.yml  node.Dockerfile
ops/nginx/: nginx.conf
src/pkg/: config.rs  constant.rs  lib.rs
src/pkg/handler/: health.rs  hello.rs  info.rs  mod.rs  msg.rs  subscribe.rs  websocket.rs
