[package]
name = "walletconnect-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pkg"
path = "src/pkg/lib.rs"

[dependencies]
axum = { version = "0.6.18" }
tokio = { version = "1.29.1", features = ["full"] }
log = { version = "*" }
log4rs = "*"
clap = { version = "4.1.13", features = ["derive"] }
serde = { version = "*", features = ["derive"] }
serde_json = { version = "*" }
