[package]
name = "walletconnect-service"
version = "0.1.0"
edition = "2021"
authors = ["mobus sunsc0220@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pkg"
path = "src/pkg/lib.rs"

[dependencies]
axum = { version = "0.6.18", features = ["ws", "headers"] }
tokio = { version = "1.29.1", features = ["full"] }
log = { version = "0.4.19" }
log4rs = { version = "1.2.0", features = ["all_components", "gzip"] }
clap = { version = "4.1.13", features = ["derive"] }
serde = { version = "*", features = ["derive"] }
serde_json = { version = "*" }
redis = { version = "0.23.0" }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = [
	"sink",
	"std",
] }
